<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#b388ff">


    <TextView
        android:id="@+id/textViewHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/comic_boys"
        android:text="@string/title"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#d1c4e9"/>

    <Button
        android:id="@+id/HomeScreenLogin"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/comic_boys"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:icon="@drawable/log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeTitle"
        />

    <Button
        android:id="@+id/HomeScreenRegister"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:icon="@drawable/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/comic_boys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeScreenLogin"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>